--- a/packages/oui-field/_variables.less
+++ b/packages/oui-field/_variables.less
@@ -1,5 +1,7 @@
 @import '../oui-color/_variables';
 
+@oui-field-spacing: rem-calc(20);
+
 @oui-field-label-default-font-color: @oui-color-shuttle;
 @oui-field-label-font-size: rem-calc(16);
 
